@@ -3358,6 +3358,7 @@ IMPORTANT: please read docs/tech/tn0016.txt before modifying this file!
     src/xrc/xh_text.cpp
     src/xrc/xh_tglbtn.cpp
     src/xrc/xh_toolb.cpp
+    src/xrc/xh_toolbk.cpp
     src/xrc/xh_tree.cpp
     src/xrc/xh_treebk.cpp
     src/xrc/xh_unkwn.cpp
@@ -3424,6 +3425,7 @@ IMPORTANT: please read docs/tech/tn0016.txt before modifying this file!
     wx/xrc/xh_text.h
     wx/xrc/xh_tglbtn.h
     wx/xrc/xh_toolb.h
+    wx/xrc/xh_toolbk.h
     wx/xrc/xh_tree.h
     wx/xrc/xh_treebk.h
     wx/xrc/xh_unkwn.h
