@@ -1188,6 +1188,7 @@ XRCDLL_OBJECTS =  \
 	$(OBJS)\xrcdll_xh_text.obj \
 	$(OBJS)\xrcdll_xh_tglbtn.obj \
 	$(OBJS)\xrcdll_xh_toolb.obj \
+	$(OBJS)\xrcdll_xh_toolbk.obj \
 	$(OBJS)\xrcdll_xh_tree.obj \
 	$(OBJS)\xrcdll_xh_treebk.obj \
 	$(OBJS)\xrcdll_xh_unkwn.obj \
@@ -1261,6 +1262,7 @@ XRCLIB_OBJECTS =  \
 	$(OBJS)\xrclib_xh_text.obj \
 	$(OBJS)\xrclib_xh_tglbtn.obj \
 	$(OBJS)\xrclib_xh_toolb.obj \
+	$(OBJS)\xrclib_xh_toolbk.obj \
 	$(OBJS)\xrclib_xh_tree.obj \
 	$(OBJS)\xrclib_xh_treebk.obj \
 	$(OBJS)\xrclib_xh_unkwn.obj \
@@ -1628,6 +1630,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_OBJECTS =  \
 	$(OBJS)\monodll_xh_text.obj \
 	$(OBJS)\monodll_xh_tglbtn.obj \
 	$(OBJS)\monodll_xh_toolb.obj \
+	$(OBJS)\monodll_xh_toolbk.obj \
 	$(OBJS)\monodll_xh_tree.obj \
 	$(OBJS)\monodll_xh_treebk.obj \
 	$(OBJS)\monodll_xh_unkwn.obj \
@@ -2350,6 +2353,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_1_OBJECTS =  \
 	$(OBJS)\monolib_xh_text.obj \
 	$(OBJS)\monolib_xh_tglbtn.obj \
 	$(OBJS)\monolib_xh_toolb.obj \
+	$(OBJS)\monolib_xh_toolbk.obj \
 	$(OBJS)\monolib_xh_tree.obj \
 	$(OBJS)\monolib_xh_treebk.obj \
 	$(OBJS)\monolib_xh_unkwn.obj \
@@ -6684,6 +6688,9 @@ $(OBJS)\monodll_xh_tglbtn.obj: ..\..\src\xrc\xh_tglbtn.cpp
 $(OBJS)\monodll_xh_toolb.obj: ..\..\src\xrc\xh_toolb.cpp
 	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) ..\..\src\xrc\xh_toolb.cpp
 
+$(OBJS)\monodll_xh_toolbk.obj: ..\..\src\xrc\xh_toolbk.cpp
+	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) ..\..\src\xrc\xh_toolbk.cpp
+
 $(OBJS)\monodll_xh_tree.obj: ..\..\src\xrc\xh_tree.cpp
 	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) ..\..\src\xrc\xh_tree.cpp
 
@@ -8924,6 +8931,9 @@ $(OBJS)\monolib_xh_tglbtn.obj: ..\..\src\xrc\xh_tglbtn.cpp
 
 $(OBJS)\monolib_xh_toolb.obj: ..\..\src\xrc\xh_toolb.cpp
 	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) ..\..\src\xrc\xh_toolb.cpp
+
+$(OBJS)\monolib_xh_toolbk.obj: ..\..\src\xrc\xh_toolbk.cpp
+	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) ..\..\src\xrc\xh_toolbk.cpp
 
 $(OBJS)\monolib_xh_tree.obj: ..\..\src\xrc\xh_tree.cpp
 	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) ..\..\src\xrc\xh_tree.cpp
@@ -14245,6 +14255,9 @@ $(OBJS)\xrcdll_xh_tglbtn.obj: ..\..\src\xrc\xh_tglbtn.cpp
 $(OBJS)\xrcdll_xh_toolb.obj: ..\..\src\xrc\xh_toolb.cpp
 	$(CXX) -q -c -P -o$@ $(XRCDLL_CXXFLAGS) ..\..\src\xrc\xh_toolb.cpp
 
+$(OBJS)\xrcdll_xh_toolbk.obj: ..\..\src\xrc\xh_toolbk.cpp
+	$(CXX) -q -c -P -o$@ $(XRCDLL_CXXFLAGS) ..\..\src\xrc\xh_toolbk.cpp
+
 $(OBJS)\xrcdll_xh_tree.obj: ..\..\src\xrc\xh_tree.cpp
 	$(CXX) -q -c -P -o$@ $(XRCDLL_CXXFLAGS) ..\..\src\xrc\xh_tree.cpp
 
@@ -14433,6 +14446,9 @@ $(OBJS)\xrclib_xh_tglbtn.obj: ..\..\src\xrc\xh_tglbtn.cpp
 
 $(OBJS)\xrclib_xh_toolb.obj: ..\..\src\xrc\xh_toolb.cpp
 	$(CXX) -q -c -P -o$@ $(XRCLIB_CXXFLAGS) ..\..\src\xrc\xh_toolb.cpp
+
+$(OBJS)\xrclib_xh_toolbk.obj: ..\..\src\xrc\xh_toolbk.cpp
+	$(CXX) -q -c -P -o$@ $(XRCLIB_CXXFLAGS) ..\..\src\xrc\xh_toolbk.cpp
 
 $(OBJS)\xrclib_xh_tree.obj: ..\..\src\xrc\xh_tree.cpp
 	$(CXX) -q -c -P -o$@ $(XRCLIB_CXXFLAGS) ..\..\src\xrc\xh_tree.cpp
