@@ -5843,6 +5843,9 @@
 				RelativePath="..\..\include\wx\xrc\xh_toolb.h">
 			</File>
 			<File
+				RelativePath="..\..\include\wx\xrc\xh_toolbk.h">
+			</File>
+			<File
 				RelativePath="..\..\include\wx\xrc\xh_tree.h">
 			</File>
 			<File
